--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -53,8 +53,20 @@
   </nav>
 
   <div class="container my-3">
-    <h1 style="text-align:center;">Welcome to Blogs app {{user.first_name}} {{user.last_name}}</h1>
+    <h1 style="text-align:center;">Welcome to Python Guides</h1>
   </div>
+
+  <div class="card">
+    <div class="card-body">
+      <h3 style="text-align:center;">Thanks for landing on this page to know more about PythonGuides.com.</h3>
+      <br>
+      <h6>I welcome you to the website and hopefully, you got to learn something in Python. I started this website to
+        share my finding and learnings in Python with you.</h6>
+      <h6>To keep things simple, I am trying to write a lot of articles on Python. Feel free to give your valuable
+        comments and also share the articles if you are liking and hoping it will be helpful to someone.</h6>
+      <br>
+      <h2 style="text-align:center;">Also, Subscribe to Our YouTube Channel for FREE Python Video Tutorials.</h2>
+    </div>
 </body>
 
 </html>
