--- a/blog/authentication/templates/addarticle.html
+++ b/blog/authentication/templates/addarticle.html
@@ -71,10 +71,10 @@
         </ul>
       </div>
     </nav>
-    <form action="addarticle" method="post" class="form-horizontal">
+    <form action="addarticle" method="post" class="form-horizontal" style="margin-left: 20%; margin-right: 20%;">
         {% csrf_token%}
         <div class="col-xs-8 col-xs-offset-4">
-            <h2 style="text-align:center;">Add your Article</h2>
+            <h2 style="text-align:center; margin-top: 5%;">Add your Article</h2>
         </div>
 
         <div class="form-group">
@@ -83,18 +83,14 @@
         </div>
         <div class="form-group">
             <label for="content">Description</label>
-            <input type="text" class="form-control" name="content" id="password" placeholder="Enter Password">
+            <!-- <input type="text" class="form-control" name="content" id="content" size="1000"> -->
+            <textarea class="form-control" name="content" id="content" cols="80" rows="10"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">LOGIN</button>
-        <button class="btn btn-light"> <a href="register" style="text-decoration: none;"> SIGN UP</a></button>
-        <br />
         <div class="form-group">
-            {% for message in messages %}
-            <div class="alert alert-danger" role="alert">
-                {{message}}
-            </div>
-            {% endfor %}
+            <label for="title">Upload Image</label>
+            <input type="file"  class="form-control" name="img" id="img" >
         </div>
+        <button type="submit" class="btn btn-primary">Publish</button>
     </form>
   </body>
 </html>
